--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">LinearLayout</string>
+    <string name="app_name">Components</string>
+    <string name="full_name">Максим Семенов ПИ-231</string>
 </resources>
